add options df feature allowing easier option/points mapping

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ __pycache__/
 *.py[cod]
 *$py.class
 .vscode/
+jupvenv/
+
+examples/examples_tests.ipynb
+examples/feature_a.csv
 # C extensions
 *.so
 .idea/
